--- a/css/main.css
+++ b/css/main.css
@@ -22,13 +22,13 @@
     overflow: hidden;
 }
 
-.wrapper .block .block_left{
+.wrapper .block .block_left {
     display: flex;
     width: 40%;
     height: 100%;
-    float: left;
     justify-content: center;
     align-items: center;
+    float: left;
 
 }
 
@@ -43,15 +43,16 @@
 
 /* !!object fit and position for IMG tag */
 
-img.img404 {
+/*img.img404 {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center center;
 
-}
+}*/
 
-.wrapper .block .block_right .right_wrap{
+.wrapper .block .block_right .right_wrap {
+    display: inline-block;
     width: 100%;
     height: 100%;
     background: url('../src/kosmonautas.png');
@@ -68,6 +69,7 @@ img.img404 {
 
 h1 {
     display: inline-block;
+    margin-top: calc(100% - 100px);
     width: 100%;
     height: 20px;
     text-align: center;
@@ -82,4 +84,18 @@ p {
     height: 25px;
     margin-top: 10px;
     text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+button {
+    width: 100px;
+    height: 25px;
+    margin-top: 15px;
+    background-color: rgb(16, 16, 185);
+    color: white;
+    margin-left: calc(50% - 50px);
+    border-radius: 20px;
+
 }
